rnsc/test_data/integration/error/parser/class_header/trailing_dot_method.rns
; .method isn't expected there. but as it is a directive, error should suggest to put it on a new line.
.class Class .method kababoom
.super java/lang/Object
.end